--- a/index.html
+++ b/index.html
@@ -10,21 +10,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
+    <!-- contactanos -->
+      <div class="container">
+        <h5>contact</h5>
+        <h6>Get in touch with me</h6>
+        <hr>
+        <div class="row">
+          <div class="col s12 m6 16">
+            <div class="row">
+              <form class="col s12" action="index.html" method="post">
+                <div class="row">
 
-    <div class="row">
-      <div class="col grid-example  s12 blue lighten-1"><p>s12</p></div>
-    </div>
-    <div class="row">
-      <div class="col grid-example s12 m4 l2 teal lighten-1"><p>s12 m4 l2</p></div>
-      <div class="col grid-example s12 m4 l8 blue  lighten-1"><p>s12 m4 l8</p></div>
-      <div class="col grid-example s12 m4 l2 teal  lighten-1"><p>s12 m4 l2</p></div>
-    </div>
-    <div class="row">
-      <div class="col grid-example purple s12 m6 l3 lighten-1"><p>s12 m6 l3</p></div>
-      <div class="col grid-example teal s12 m6 l3 lighten-1"><p>s12 m6 l3</p></div>
-      <div class="col grid-example blue s12 m6 l3 lighten-1"><p>s12 m6 l3</p></div>
-      <div class="col grid-example purple s12 m6 l3 lighten-1"><p>s12 m6 l3</p></div>
-    </div>
+                </div>
+              </form>
+            </div>
+
+          </div>
+
+        </div>
+      </div>
 
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
