--- a/index.html
+++ b/index.html
@@ -11,24 +11,58 @@
   </head>
   <body>
     <!-- contactanos -->
-      <div class="container">
-        <h5>contact</h5>
-        <h6>Get in touch with me</h6>
-        <hr>
-        <div class="row">
+      <section class="contacto">
+        <div class="container">
+          <div class="row center-align">
+            <div class="col s12">
+              <h5>contact</h5>
+              <h6>Get in touch with me</h6>
+              <hr>
+            </div>
+          </div>
+          <div class="row">
           <div class="col s12 m6 16">
             <div class="row">
               <form class="col s12" action="index.html" method="post">
-                <div class="row">
-
-                </div>
+                    <div class="row">
+                      <div class="input-field col s6">
+                        <input id="first_name" type="text" class="validate">
+                        <label for="first_name">First Name</label>
+                      </div>
+                      <div class="input-field col s6">
+                        <input id="last_name" type="text" class="validate">
+                        <label for="last_name">Last Name</label>
+                      </div>
+                    </div>
+                    <div class="row">
+                      <div class="input-field col s12">
+                        <input id="email" type="email" class="validate">
+                        <label for="email">E-Mail</label>
+                      </div>
+                    </div>
+                    <textarea class="materialize-textarea" placeholder="Your Message" required></textarea>
+                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                    </button>
               </form>
             </div>
-
           </div>
-
+          <div class="col s12 m6 l6 contactanos left-align">
+             <h6>Address</h6>
+             <p> Nr. 6, 21 Awesome Street, London, UK</p>
+             <h6>Phone Number</h6>
+             <p>+91 9912776151</p>
+             <h6>Website</h6>
+             <p>qnimate.com</p>
+          </div>
         </div>
-      </div>
+        </div>
+      </section>
+      <footer >
+        <div class="footer-copyright blue-grey">
+          <div class="container grey-text text-lighten-4"> © 2014 Copyright<a class="grey-text text-lighten-4 right" href="#">minombre@hotmail.com</a>
+          </div>
+        </div>
+      </footer>
 
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
