arreglando el footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
-    <!-- contactanos -->
+    <header>
+
+    </header>
+    <main>
+      <!-- contactanos -->
       <section class="contacto">
         <div class="container">
           <div class="row center-align">
@@ -21,43 +25,53 @@
             </div>
           </div>
           <div class="row">
-          <div class="col s12 m6 16">
-            <div class="row">
-              <form class="col s12" action="index.html" method="post">
-                    <div class="row">
-                      <div class="input-field col s6">
-                        <input id="first_name" type="text" class="validate">
-                        <label for="first_name">First Name</label>
+            <div class="col s12 m6 16">
+              <div class="row">
+                <form class="col s12" action="index.html" method="post">
+                      <div class="row">
+                        <div class="input-field col s6">
+                          <input id="first_name" type="text" class="validate">
+                          <label for="first_name">First Name</label>
+                        </div>
+                        <div class="input-field col s6">
+                          <input id="last_name" type="text" class="validate">
+                          <label for="last_name">Last Name</label>
+                        </div>
                       </div>
-                      <div class="input-field col s6">
-                        <input id="last_name" type="text" class="validate">
-                        <label for="last_name">Last Name</label>
+                      <div class="row">
+                        <div class="input-field col s12">
+                          <input id="email" type="email" class="validate">
+                          <label for="email">E-Mail</label>
+                        </div>
                       </div>
-                    </div>
-                    <div class="row">
-                      <div class="input-field col s12">
-                        <input id="email" type="email" class="validate">
-                        <label for="email">E-Mail</label>
+                      <div class="row">
+                        <div class="input-field col s12">
+                          <textarea class="materialize-textarea" placeholder="Your Message" required></textarea>
+                        </div>
                       </div>
-                    </div>
-                    <textarea class="materialize-textarea" placeholder="Your Message" required></textarea>
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                    </button>
-              </form>
+                      <div class="row">
+                        <div class="input-field col s12">
+                          <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+                          </button>
+                        </div>
+                      </div>
+                </form>
+              </div>
+            </div>
+            <div class="col s12 m6 l6 left-align contactanos">
+               <h6>Address</h6>
+               <p> Nr. 6, 21 Awesome Street, London, UK</p>
+               <h6>Phone Number</h6>
+               <p>+91 9912776151</p>
+               <h6>Website</h6>
+               <p>qnimate.com</p>
             </div>
           </div>
-          <div class="col s12 m6 l6 contactanos left-align">
-             <h6>Address</h6>
-             <p> Nr. 6, 21 Awesome Street, London, UK</p>
-             <h6>Phone Number</h6>
-             <p>+91 9912776151</p>
-             <h6>Website</h6>
-             <p>qnimate.com</p>
-          </div>
-        </div>
         </div>
       </section>
-      <footer >
+
+    </main>
+    <footer class="page-footer blue-grey">
         <div class="footer-copyright blue-grey">
           <div class="container grey-text text-lighten-4"> © 2014 Copyright<a class="grey-text text-lighten-4 right" href="#">minombre@hotmail.com</a>
           </div>
