subiendo img pequeñas

--- a/index.html
+++ b/index.html
@@ -14,11 +14,34 @@
     <div class="row">
       <div class="col grid-example  s12 blue lighten-1"><p>s12</p></div>
     </div>
-    <div class="row">
-      <div class="col grid-example s12 m4 l2 teal lighten-1"><p>s12 m4 l2</p></div>
-      <div class="col grid-example s12 m4 l8 blue  lighten-1"><p>s12 m4 l8</p></div>
-      <div class="col grid-example s12 m4 l2 teal  lighten-1"><p>s12 m4 l2</p></div>
-    </div>
+    <section class="part-two">
+       <h3 class="center-align mt-5">PORTAFOLIO</h3>
+       <h6 class="center-align mb-20">MY LASTEST PROJECTS</h6>
+       <div class="container">
+       <div class="row mb-0" id="row">
+         <div class="col s12 m4" id="padding-img">
+           <img class="materialboxed responsive-img" id="size-img"  src="assets/img/desk-book-min.jpg" alt="Desk-book">
+         </div>
+         <div class="col s12 m4" id="padding-img">
+           <img class="materialboxed responsive-img" id="size-img"  src="assets/img/consola-min.jpg" alt="Consola">
+         </div>
+         <div class="col s12 m4" id="padding-img">
+           <img class="materialboxed responsive-img" id="size-img"  src="assets/img/code-min.jpg" alt="code">
+         </div>
+         </div>
+         <div class="row">
+           <div class="col s12 m4" id="padding-img">
+            <img class="materialboxed responsive-img" id="size-img"  src="assets/img/girl-code-min.jpg" alt="girl-code">
+          </div>
+          <div class="col s12 m4" id="padding-img">
+            <img class="materialboxed responsive-img" id="size-img"  src="assets/img/desk-code-min.jpg" alt="desk-code">
+          </div>
+          <div class="col s12 m4" id="padding-img">
+            <img class="materialboxed responsive-img" id="size-img"  src="assets/img/img-1-min.jpg" alt="tree">
+          </div>
+         </div>
+         </div>
+     </section>
     <div class="row">
       <div class="col grid-example purple s12 m6 l3 lighten-1"><p>s12 m6 l3</p></div>
       <div class="col grid-example teal s12 m6 l3 lighten-1"><p>s12 m6 l3</p></div>
