--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <div class="row">
       <div class="col grid-example  s12 blue lighten-1"><p>s12</p></div>
     </div>
-    <section class="part-two">
+    <section>
        <h3 class="center-align mt-5">PORTAFOLIO</h3>
        <h6 class="center-align mb-20">MY LASTEST PROJECTS</h6>
        <div class="container">
-       <div class="row mb-0" id="row">
-         <div class="col s12 m4" id="padding-img">
-           <img class="materialboxed responsive-img" id="size-img"  src="assets/img/desk-book-min.jpg" alt="Desk-book">
-         </div>
-         <div class="col s12 m4" id="padding-img">
-           <img class="materialboxed responsive-img" id="size-img"  src="assets/img/consola-min.jpg" alt="Consola">
-         </div>
-         <div class="col s12 m4" id="padding-img">
-           <img class="materialboxed responsive-img" id="size-img"  src="assets/img/code-min.jpg" alt="code">
-         </div>
+         <div class="row mb-0" id="row">
+           <div class="col s12 m4" id="padding-img">
+             <img class="materialboxed responsive-img" id="size-img"  src="assets/img/desk-book-min.jpg" alt="Desk-book">
+           </div>
+           <div class="col s12 m4" id="padding-img">
+             <img class="materialboxed responsive-img" id="size-img"  src="assets/img/consola-min.jpg" alt="Consola">
+           </div>
+           <div class="col s12 m4" id="padding-img">
+             <img class="materialboxed responsive-img" id="size-img"  src="assets/img/code-min.jpg" alt="code">
+           </div>
          </div>
          <div class="row">
            <div class="col s12 m4" id="padding-img">
@@ -40,7 +40,7 @@
             <img class="materialboxed responsive-img" id="size-img"  src="assets/img/img-1-min.jpg" alt="tree">
           </div>
          </div>
-         </div>
+       </div>
      </section>
 
       <!--Import jQuery before materialize.js-->
