--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
       <section>
        <h3 class="center-align mt-5">PORTAFOLIO</h3>
        <h6 class="center-align mb-20">MY LASTEST PROJECTS</h6>
+       <hr class="line">
        <div class="container">
-         <div class="row mb-0" id="row">
+         <div class="row mb-0">
            <div class="col s12 m4" id="padding-img">
              <img class="materialboxed responsive-img" id="size-img"  src="assets/img/desk-book-min.jpg" alt="Desk-book">
            </div>
@@ -30,7 +31,7 @@
              <img class="materialboxed responsive-img" id="size-img"  src="assets/img/code-min.jpg" alt="code">
            </div>
          </div>
-         <div class="row">
+         <div class="row pb-20">
            <div class="col s12 m4" id="padding-img">
             <img class="materialboxed responsive-img" id="size-img"  src="assets/img/girl-code-min.jpg" alt="girl-code">
           </div>
@@ -50,7 +51,7 @@
             <div class="col s12">
               <h5>contact</h5>
               <h6>Get in touch with me</h6>
-              <hr>
+              <hr  class="line">
             </div>
           </div>
           <div class="row">
