--- a/index.html
+++ b/index.html
@@ -10,21 +10,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   </head>
   <body>
+    <header class="valign-wrapper center-align">
+      <div class="row">
+        <h1 class="white-text">NOMBRE APELLIDO</h1>
+        <h5 class="waves-effect grey lighten-4">WEB AND MOBILE DEVELOPER</h5>
+      </div>
+    </header>
+    <section class="section" id="about-me">
+      <div class="container">
+        <div class="row center-align">
+          <h5>ABOUT ME</h5>
+          <h6>LET ME INTRODUCE MY SELF</h6>
+          <hr>
+        </div>
+        <div class="row">
+          <div class="col s12 m4 l4 justify">
+            <h6 class="center-align title">STORY</h6>
+            <p>Monica Lynn Brodovsky is a graphic designer, illustrator, typographer, photographer, photo retoucher, screen printer, chocolate enthusiast, and mother to the most beautiful daughter in the world (slightly biased).</p>
+            <p>When she's not busy sharing cheerios from the floor with her toddler, she enjoys obsessing over fine details and trying to find the perfect balance between work life and mom life.</p>
+          </div>
+          <div class="col s12 m4 l4">
+            <h6 class="center-align title">PROFILE</h6>
+            <div class="card blue-grey darken-1 center-align">
+              <div class="card-content white-text">
+                <img src="assets/img/Woman.png" alt="">
+                <p>Monica earned her degree in Graphic and Interactive Design from Temple University the Tyler School of art in 2011.</p>
+              </div>
+              <div class="card-action">
+                <a href="#">Link</a>
+                <a href="#">Link</a>
+              </div>
+            </div>
+          </div>
+          <div class="col s12 m4 l4">
+            <h6 class="center-align title">CURRENT JOBS</h6>
+            <ul class="collapsible" data-collapsible="accordion">
+              <li>
+                <div class="collapsible-header">Designer</div>
+                <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+              </li>
+              <li>
+                <div class="collapsible-header">Developer</div>
+                <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+              </li>
+              <li>
+                <div class="collapsible-header">Video Editor</div>
+                <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+              </li>
+              <li>
+                <div class="collapsible-header">Support Assistant</div>
+                <div class="collapsible-body"><p>Lorem ipsum dolor sit amet.</p></div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-    <div class="row">
-      <div class="col grid-example  s12 blue lighten-1"><p>s12</p></div>
-    </div>
-    <div class="row">
-      <div class="col grid-example s12 m4 l2 teal lighten-1"><p>s12 m4 l2</p></div>
-      <div class="col grid-example s12 m4 l8 blue  lighten-1"><p>s12 m4 l8</p></div>
-      <div class="col grid-example s12 m4 l2 teal  lighten-1"><p>s12 m4 l2</p></div>
-    </div>
-    <div class="row">
-      <div class="col grid-example purple s12 m6 l3 lighten-1"><p>s12 m6 l3</p></div>
-      <div class="col grid-example teal s12 m6 l3 lighten-1"><p>s12 m6 l3</p></div>
-      <div class="col grid-example blue s12 m6 l3 lighten-1"><p>s12 m6 l3</p></div>
-      <div class="col grid-example purple s12 m6 l3 lighten-1"><p>s12 m6 l3</p></div>
-    </div>
+    </section>
+
 
       <!--Import jQuery before materialize.js-->
       <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
