--- a/index.html
+++ b/index.html
@@ -76,29 +76,29 @@
           <div class="row center-align">
             <div class="col s12">
               <h5>portafolio</h5>
-              <h6>my latest projects</h6>
+              <h6>My latest projects</h6>
               <hr class="line">
             </div>
           </div>
           <div class="row mb-0">
-           <div class="col s12 m4" id="padding-img">
+           <div class="col s4 padding-img">
              <img class="materialboxed responsive-img" id="size-img"  src="assets/img/desk-book-min.jpg" alt="Desk-book">
            </div>
-           <div class="col s12 m4" id="padding-img">
+           <div class="col s4 padding-img">
              <img class="materialboxed responsive-img" id="size-img"  src="assets/img/consola-min.jpg" alt="Consola">
            </div>
-           <div class="col s12 m4" id="padding-img">
+           <div class="col s4 padding-img">
              <img class="materialboxed responsive-img" id="size-img"  src="assets/img/code-min.jpg" alt="code">
            </div>
          </div>
           <div class="row">
-           <div class="col s12 m4" id="padding-img">
+           <div class="col s4  padding-img">
             <img class="materialboxed responsive-img" id="size-img"  src="assets/img/girl-code-min.jpg" alt="girl-code">
           </div>
-          <div class="col s12 m4" id="padding-img">
+          <div class="col s4 padding-img">
             <img class="materialboxed responsive-img" id="size-img"  src="assets/img/desk-code-min.jpg" alt="desk-code">
           </div>
-          <div class="col s12 m4" id="padding-img">
+          <div class="col s4 padding-img">
             <img class="materialboxed responsive-img" id="size-img"  src="assets/img/img-1-min.jpg" alt="tree">
           </div>
          </div>
