ajustes en seccion portafolio

--- a/index.html
+++ b/index.html
@@ -81,25 +81,25 @@
             </div>
           </div>
           <div class="row mb-0">
-           <div class="col s4 padding-img">
-             <img class="materialboxed responsive-img" id="size-img"  src="assets/img/desk-book-min.jpg" alt="Desk-book">
-           </div>
-           <div class="col s4 padding-img">
-             <img class="materialboxed responsive-img" id="size-img"  src="assets/img/consola-min.jpg" alt="Consola">
-           </div>
-           <div class="col s4 padding-img">
-             <img class="materialboxed responsive-img" id="size-img"  src="assets/img/code-min.jpg" alt="code">
-           </div>
+              <div class="col s4 padding-img">
+                <img class="materialboxed size-img"  src="assets/img/desk-book-min.jpg" alt="Desk-book">
+              </div>
+              <div class="col s4 padding-img">
+                <img class="materialboxed size-img"  src="assets/img/consola-min.jpg" alt="Consola">
+              </div>
+              <div class="col s4 padding-img">
+                <img class="materialboxed size-img"  src="assets/img/code-min.jpg" alt="code">
+             </div>
          </div>
           <div class="row">
            <div class="col s4  padding-img">
-            <img class="materialboxed responsive-img" id="size-img"  src="assets/img/girl-code-min.jpg" alt="girl-code">
+            <img class="materialboxed  size-img"  src="assets/img/girl-code-min.jpg" alt="girl-code">
           </div>
           <div class="col s4 padding-img">
-            <img class="materialboxed responsive-img" id="size-img"  src="assets/img/desk-code-min.jpg" alt="desk-code">
+            <img class="materialboxed  size-img"  src="assets/img/desk-code-min.jpg" alt="desk-code">
           </div>
           <div class="col s4 padding-img">
-            <img class="materialboxed responsive-img" id="size-img"  src="assets/img/img-1-min.jpg" alt="tree">
+            <img class="materialboxed  size-img"  src="assets/img/img-1-min.jpg" alt="tree">
           </div>
          </div>
        </div>
